--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -57,6 +57,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "hoangvu12",
+      "name": "Vu Nguyen",
+      "avatar_url": "https://avatars.githubusercontent.com/u/68330291?v=4",
+      "profile": "https://github.com/hoangvu12",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
